P2G-1379 Additional fix for offcanvas on tablets

--- a/src/components/offcanvas/offcanvas.scss
+++ b/src/components/offcanvas/offcanvas.scss
@@ -32,7 +32,7 @@ $offcanvas_spinner-color: $color_primary-500 !default;
 
         @include media('>=tablet') {
             top: $offcanvas_top-offset-tablet;
-            bottom: auto;
+            bottom: 0;
         }
 
         @include media('>=laptop') {
